# llm-playground

./: .env.example  .gitignore  pyproject.toml
.cursor/rules/: uv.mdc
llm_playground/: utils.py
scripts/: main.py  test.ipynb
